# EconEvalsSubmit

./: .gitignore  README.md
arena-leaderboards/: README.md  pyproject.toml
arena-leaderboards/arena_hard/: __init__.py  logging.py  utils.py
arena-leaderboards/arena_hard/analysis/: math_utils.py  results.py
arena-leaderboards/arena_hard/configs/: __init__.py  arena.py  endpoint.py
arena-leaderboards/arena_hard/dataloading/: __init__.py  base.py  questions.py
arena-leaderboards/configs/: multiturn.yaml
arena-leaderboards/scripts/: get_lb.py  run_judges.py
fast_openai/: .gitignore  README.md  pyproject.toml
fast_openai/fast_openai/: __init__.py  base.py  cashews_cache.py  concurrency.py  results_collector.py  sized_iterable.py  utils.py  worker.py
predictions/: README.md  pyproject.toml
predictions/cli/: call_batch.sh  export.py  main.py
predictions/configs/: DeepSeek-V3.1.json  DeepSeek-V3.json  Llama-3-70b-chat-hf.json  Llama-3.3-70B-Instruct-Turbo.json  Mistral-Small-24B-Instruct-2501.json  claude-3.5-sonnet-v2.json  deepseek-r1.json  gemini-2.0-flash-lite.json  gemini-2.0-flash.json  gemini-2.5-65k.json  gemini-2.5-flash-lite.json  gemini-2.5-flash.json  gemini-2.5.json  gpt-4.1-mini.json  gpt-4.1-nano.json  gpt-4.1.json  gpt-4o.json  gpt-5-high.json  gpt-5-low.json  gpt-5-medium.json  gpt-5-mini-high.json  gpt-5-mini-low.json  gpt-5-mini-medium.json  gpt-5-nano-medium.json  gpt-5.1-medium.json  gpt-5.2-high.json  gpt-5.2-medium.json  gpt-5.2-xhigh.json  gpt-oss-120b.json  gpt-oss-20b.json  llama-4-maverick-17b-128e-Instruct-fp8.json  llama-4-maverick-17b-128e-instruct-maas.json  llama-4-scout-17b-16e-Instruct.json  llama-4-scout-17b-16e-instruct-maas.json  o3-2025-04-16-high.json  o3-2025-04-16.json  o3-mini-2025-01-31.json  o4-mini-2025-04-16-high.json  o4-mini-2025-04-16.json  qwen2.5-coder-32b-instruct.json  (+2 more)
predictions/ee_preds/: evals.py  export.py  types.py  utils.py
retrieval/: pyproject.toml
retrieval/cli/: checksum.py  classify.py  filter.py  misc.py  retrieve.py  turn_selection.py
retrieval/ee_retrieval/: __init__.py  onet.py
synth_gen/: README.md  pyproject.toml
synth_gen/lm_prompts/: pyproject.toml
synth_gen/repro_data/: manual_labels_2.csv
synth_gen/scripts/: make_detailed_tasks.py  run_checklist.py  run_search.py  run_search_references.py
synth_gen/synth_gen/: background_generation.py  checklist.py  postprocess_generation.py  query_generation.py  reference_generation.py  rewrite_generation.py  search.py  utils.py  verifier.py
(+192 files in other folders)
