[tool.poetry]
name = "ee_retrieval"
version = "1.0.0"
description = ""
authors = ["ABC"]

[tool.poetry.dependencies]
python = "3.10"
fast_openai = { path = "../fast_openai", develop = true }
pandas = "~=2.2.2"
tyro = "~=0.9.24"
typeguard = "^4.4.3"
zstandard = "~=0.23.0"
numpy= ">=1.22.3"
tqdm = "^4.67.1"
diskcache = "^5.6.3"
datasets = "~=2.20.0"
faiss-cpu = "1.12.0"
openpyxl = "^3.1.5"
coloredlogs = "^15.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
